tests/fixtures/errors/type_mismatch.gbl
import io;

func main() {
    var x: int = "hello";  // error: type mismatch
}
